--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "purplecat_healing",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://taylordarneille.github.io/purplecat_healing/",
   "dependencies": {
     "@material-ui/core": "^4.8.3",
     "@testing-library/jest-dom": "^4.2.4",
