trying to fix scripts

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "purplecat_healing",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://taylordarneille.github.io/purplecat_healing",
+  "homepage": "https://taylordarneille.github.io/purplecat_healing/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
